change the respective view.

--- a/app/views/timeline_widget/thumbnail.html.erb
+++ b/app/views/timeline_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Timeline widget' do %>
-  Add a timeline to your page.
+<%= scrivito_thumbnail 'Timeline', image_tag("timeline.png") do %>
+  Creates a element of a vertical Timeline
 <% end %>
