--- a/app/assets/stylesheets/scrivito_timeline_widget.css.scss
+++ b/app/assets/stylesheets/scrivito_timeline_widget.css.scss
@@ -59,26 +59,11 @@
       margin: 0 0 0 52px;
     }
 
-    .main-headline,
-    .content-top {
-      text-align: left;
-      padding-left: 0px;
-      width: auto;
-      margin-left: 52px;
-    }
-
-    .scrivito-icon-box {
-      margin-left: -52px;
-    }
-
     .row .col-md-6 {
       &.left,
       &.right {
-        width: auto;
-        margin-left: 52px;
-        padding-left: 20px;
-        margin-right: 0;
-        padding-right: 0px;
+        width: 75%;
+        margin: 0 auto;
       }
     }
   }
