--- a/app/views/timeline_widget/thumbnail.html.erb
+++ b/app/views/timeline_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Timeline', image_tag("timeline.png") do %>
+<%= scrivito_thumbnail 'Timeline', image_tag("scrivito_timeline_widget.png") do %>
   Creates a element of a vertical Timeline
 <% end %>
