Locals for thumbnail and details views

--- a/app/views/timeline_widget/thumbnail.html.erb
+++ b/app/views/timeline_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Timeline', image_tag("scrivito_timeline_widget.png") do %>
-  Creates a element of a vertical Timeline
+<%= scrivito_thumbnail t('scrivito_timeline_widget.thumbnail.title', default: 'Timeline'), image_tag("scrivito_timeline_widget.png") do %>
+  <%= t('scrivito_timeline_widget.thumbnail.description', default: 'Add an element of a vertical Timeline') %>
 <% end %>
