--- a/app/views/timeline_widget/details.html.erb
+++ b/app/views/timeline_widget/details.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_details_for 'Headline' do %>
+<%= scrivito_details_for t('scrivito_timeline_widget.details.headline', default: 'Headline') do %>
   <%= scrivito_tag :div, widget, :headline %>
 <% end %>
